# agentic_cookie_cutter

./: KARPATHY_PRINCIPLES.md  README.md  main.py  pyproject.toml
src/agentic_cookie_cutter/: main.py
src/agentic_cookie_cutter/templates/: professional-instruction-pattern.md
src/agentic_cookie_cutter/templates/.claude/commands/: code-reviewer.md  developer.md  git-committer.md  project-manager.md  qa-reviewer.md  technical-writer.md
src/agentic_cookie_cutter/templates/.gemini/: .geminiignore
src/agentic_cookie_cutter/templates/.gemini/skills/code-reviewer/: SKILL.md
src/agentic_cookie_cutter/templates/.gemini/skills/developer/: SKILL.md
src/agentic_cookie_cutter/templates/.gemini/skills/git-committer/: SKILL.md
src/agentic_cookie_cutter/templates/.gemini/skills/project-manager/: SKILL.md
src/agentic_cookie_cutter/templates/.gemini/skills/qa-reviewer/: SKILL.md
src/agentic_cookie_cutter/templates/.gemini/skills/technical-writer/: SKILL.md
templates/.claude/: CLAUDE.md
templates/.claude/commands/: code-reviewer.md  git-committer.md  project-manager.md  technical-writer.md
templates/.gemini/: GEMINI.md
templates/.gemini/skills/developer/: SKILL.md
templates/.gemini/skills/git-committer/: SKILL.md
templates/.gemini/skills/technical-writer/: SKILL.md
